--- a/Assignment2/pom.xml
+++ b/Assignment2/pom.xml
@@ -37,7 +37,11 @@
             <artifactId>json-simple</artifactId>
             <version>1.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-client</artifactId>
+            <version>2.2.0</version>
+        </dependency>
     </dependencies>
-
 
 </project>
